# Sanic-Backend-App

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: auth.py  config.py  exceptions.py  main.py
app/database/: database.py
app/database/migrations/: env.py
app/database/migrations/versions/: 3fe0b09f412b_add_test_users.py  654d31f801fa_add_column_amount_for_payments.py  c5efe7446a5c_initial.py
app/models/: accounts.py  admin_users.py  payments.py  users.py
app/repositories/: admin_repository.py  user_repository.py  webhook_repository.py
app/routers/: admin_router.py  pay_system_router.py  user_router.py
app/schemas/: pyd.py
app/services/: admin_service.py  token_service.py  user_service.py  webhook_service.py
app/utils/: utils.py
scripts/: run_mypy.sh  run_ruff.sh
