[tool.poetry]
name = "sanic-backend-app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [
    { include = "app" },
]

[tool.poetry.dependencies]
python = "^3.12"
sanic = "^24.12.0"
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.7.1"
sanic-ext = "^23.12.0"
sqlalchemy = "^2.0.37"
asyncpg = "^0.30.0"
alembic = "^1.14.1"
pyjwt = "^2.10.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.9.4"
mypy = "^1.14.1"

[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "dist",
    "build",
    "migrations"
]
line-length = 79
fix = false
include = ["*.py"]
indent-width = 4

[tool.ruff.lint]
select = [
    "ALL"
]
ignore = ["D", "COM812", "FA102", "ANN401", "A002"]

[tool.mypy]
plugins = [
    "pydantic.mypy",
    "sqlalchemy.ext.mypy.plugin"
]
ignore_missing_imports = true
exclude = ['migrations']

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
